# drutai-torch

./: pyproject.toml
drutai/: predict.py
drutai/util/: Feature.py  Model.py
drutai/web/: app.py  schemas.py  service.py
scripts/: convert_to_onnx.py
