[project]
name = "drutai"
version = "0.0.1"
description = ""
authors = [
    {name = "Jianfeng Sun",email = "jianfeng.sunmt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy (>=1.24.3)",
    "onnxruntime (>=1.17.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "biopython (>=1.85,<2.0)",
    "pyfiglet (>=1.0.2,<2.0.0)",
    "rdkit (>=2024.9.6,<2025.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.30.0,<1.0.0)"
]

[tool.poetry.scripts]
drutai = "drutai.predict:run"
drutai_download = "drutai.predict:download"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
